2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/notification-area/eggtraymanager.c:
	(egg_tray_manager_get_child_title):
	Fixes string signedness issue in notification-are applet.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-title.c: (render):
	Fixes a memory leak when hovering over icons.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/switcher/applet.c:
	Fixes a translation issue in Switcher applet.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-task.c: (_task_wnck_icon_changed),
	(awn_task_update_icon), (awn_task_set_width),
	(awn_task_set_custom_icon), (awn_task_unset_custom_icon),
	(_task_choose_custom_icon):
	Fixes reflection related memory leaks in awn-task.c.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/trash/trashapplet.c: (trash_applet_destroy),
	(update_icons), (draw):
	* applets/trash/trashapplet.h:
	Trashapplet loads the reflection only when the icon updates.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-task.c: (_task_destroy):
	Fixes a memory leak in _task_destroy.

2007-07-15  Neil J. Patel  <njpatel@gmail.com>

	Patch by haytjes <hv1989@gmail.com>

	* src/awn-bar.c: (render_rect), (render):
	Fix rendering of the edge.

	* src/awn-utils.c: (_move_bar), (awn_hide):
	Fix auto hide support for icon_offset.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task.c: (_rounded_rect), (draw):
	Make the highlight have rounded corners, and be the same colour as
	the main border.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-x.c: (awn_x_set_strut):
	Correct so it actually works!

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-x.c: (awn_x_set_strut):
	Add the icon_offset to the strut property (so maximised windows don't
	go behind the bar).

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (render):